[metadata]
name                 = adaops
version              = 0.14.1
url                  = https://github.com/den-is/adaops
description          = A wrapper ops library mostly around cardano-cli to automate various CLI scenarios.
long_description     = file: README.md
long_description_content_type = text/markdown
author               = Denis Iskandarov
author_email         = denis@cloudboom.io
keywords             = cardano, ada, blockchain, crypto, cryptocurrency, cardano-cli, cardano-node
license_files        = LICENSE
license              = MIT
project_urls         =
    Company = https://cloudboom.io
    Source  = https://github.com/den-is/adaops/
    Tracker = https://github.com/den-is/adaops/issues
classifiers          =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires      = >=3.7
include_package_data = True
package_dir          =
    =src
packages             = find:

install_requires =
    psutil
    python-dotenv

[options.packages.find]
where                = src
